# floripa-frota-inteligente

./: .env.example  .gitignore  CLAUDE.md  README.md  demo.sh  pyproject.toml  scheduler.py
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
alertas/: alert_config.py  motor.py  regras.py  resolver.py
data/: gerador_dados.py
data/seeds/: INCONSISTENCIAS.md  abastecimento.csv  gatilho_demo_abastecimento.csv  licenciamento.sqlite  limiares_semente.json  manutencao.xlsx  veiculos.json
db/: alembic.ini  config.py  init_db.py  models.py  seed_limiares.py
db/migrations/: env.py
docs/checkpoints/: CP1_Smart_Fleet_Floripa.md  CP2_Smart_Fleet_Floripa.docx  CP2_Smart_Fleet_Floripa.md  CP3_smart_Fleet_Floripa.md
docs/decisoes/: ADR-001-placa-canonica-dois-formatos.md  ADR-002-persistir-km-hodometro-abastecimento.md  ADR-003-calibracao-realismo-fontes-simuladas.md  ADR-004-null-em-chaves-de-upsert.md  ADR-005-sobrescrita-upsert-dimensoes.md  ADR-006-idempotencia-motor-insert-lote-on-conflict.md
fake_api/: README.md  main.py  multas.json
pipeline/: README.md  config.py  run_etl.py
pipeline/extract/: __init__.py  abastecimento.py  licenciamento.py  (+2 more)
specs/: README.md
tests/: test_alertas.py  test_db.py  test_gerador_dados.py  test_pipeline.py
wiki/: arquitetura_tecnica_desafio13_v1.md  arquitetura_tecnica_desafio13_v2.md  kanban_tasks_desafio13_frota_municipal.md  wiki_desafio13_frota_municipal.md
(+49 files in other folders)
