[project]
name = "desafio13-frota-municipal"
version = "0.1.0"
description = "PoC Desafio 13 — Gestão Inteligente da Frota Municipal (Florianópolis)"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "numpy>=1.26",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "python-docx>=1.2.0",
    "pillow>=12.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.uv]
package = false
